# fig2img

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.ko.md  README.md  release.sh  rustfmt.toml
.github/workflows/: release-and-homebrew.yml
benchmarks/: Cargo.toml  benchmark_results.csv
benchmarks/src/: main.rs
fig2img/: Cargo.toml
fig2img/src/: cli.rs  lib.rs  main.rs
fig2img/src/commands/: convert.rs  download.rs
fig2img/src/core/converter/: avif.rs  mod.rs  webp.rs
image_proc/: Cargo.toml
image_proc/src/: config.rs  main.rs
image_proc/src/commands/: convert.rs
image_proc/src/utils/: filename.rs
src/: cli.rs  config.rs  converter.rs  downloader.rs  figma.rs  main.rs
src/commands/: convert.rs  download.rs  mod.rs
src/core/: converter.rs  downloader.rs  extractor.rs  mod.rs
src/core/converter/: avif.rs  webp.rs
