[package]
name = "figma-image-tool"
version = "0.0.1"
edition = "2021"

[dependencies]
config = "0.15.8"
clap = { version = "4.5.30", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43", features = ["full"] }
futures = "0.3.31"
ravif = "0.11.11"
rgb = "0.8.50"
image = "0.25.5"

[dev-dependencies]
mockito = "1.2"
tokio = { version = "1.43", features = ["full", "test-util"] }
