[package]
name = "image_proc"
version = "0.0.1"
edition = "2021"
description = "A tool for processing images"
license = "MIT"

[[bin]]
name = "image_proc"
path = "src/main.rs"

[lib]
name = "image_proc"
path = "src/lib.rs"

[dependencies]
config = "0.15.8"
clap = { version = "4.5.30", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = "1.0.218"
serde_json = "1.0.139"
futures = "0.3.31"
ravif = "0.11.11"
rgb = "0.8.50"
image = "0.25.5"
tokio.workspace = true

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.17.1"
